[tool.poetry]
name = "hwaudit"
version = "4.2.0.1"
description = "opsi hardware audit"
homepage = "https://www.opsi.org"
license = "AGPL-3.0"
authors = ["uib GmbH <info@uib.de>"]
maintainers = ["uib GmbH <info@uib.de>"]

[[tool.poetry.source]]
name = "uib"
url = "https://pypi.uib.gmbh/simple/"

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
argparse = "^1.4.0"
python-opsi = "^4.2.0.300"
#python-opsi = {path = "../python-opsi/"}
pywin32 = { version = "^303", platform = "win32" }
wmi  = { version = "^1.5.1", platform = "win32" }
pywin32-ctypes = { version = "^0.2.0", platform = "win32" }
pefile = "^2022.5"
bs4 = "^0.0.1"
macholib = { version = "^1.14", platform="darwin" }


[tool.poetry.scripts]
hwaudit = "hwaudit.__main__:main"

[tool.poetry.dev-dependencies]
pytest = "^7"
pyinstaller = "^5.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
