[tool.poetry]
name = "hwaudit"
version = "4.3.0.0"
description = "opsi hardware audit"
homepage = "https://www.opsi.org"
license = "AGPL-3.0"
authors = ["uib GmbH <info@uib.de>"]
maintainers = ["uib GmbH <info@uib.de>"]

[[tool.poetry.source]]
name = "uib"
url = "https://pypi.uib.gmbh/simple/"
priority = "primary"

[[tool.poetry.source]]
name = "PyPI"

[tool.poetry.dependencies]
python = ">=3.11, <3.12"
argparse = "^1.4.0"
python-opsi-common = "^4.3.0"
pywin32 = { version = "^303", platform = "win32" }
wmi  = { version = "^1.5.1", platform = "win32" }
pywin32-ctypes = { version = "^0.2.0", platform = "win32" }
pefile = "^2023.2"
bs4 = "^0.0.2"
macholib = { version = "^1.14", platform="darwin" }

[tool.poetry.scripts]
hwaudit = "hwaudit.__main__:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7"
pyinstaller = "^5.0"
ruff = "^0.2.2"
mypy = "^1.8.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.ruff]
line-length = 140

[tool.ruff.format]
indent-style = "tab"
