[build-system]
requires = [ "poetry>=0.12",]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "hwaudit"
version = "4.3.0.1"
description = "opsi hardware audit"
homepage = "https://www.opsi.org"
license = "AGPL-3.0"
authors = [ "uib GmbH <info@uib.de>",]
maintainers = [ "uib GmbH <info@uib.de>",]
[[tool.poetry.source]]
name = "uib"
url = "https://pypi.uib.gmbh/simple/"
priority = "primary"

[[tool.poetry.source]]
name = "PyPI"

[tool.ruff]
line-length = 140

[tool.poetry.dependencies]
python = ">=3.11, <3.12"
argparse = "^1.4"
python-opsi = ">=4.3.6.3,<4.4"
python-opsi-common = ">=4.3.24.1,<4.4"
pefile = "^2024.8"
bs4 = "^0.0"
cryptography = ">=42.0.0,<43.0.0"
pyzsync = ">=1.2.6,<1.3"


[tool.poetry.scripts]
hwaudit = "hwaudit.__main__:main"

[tool.ruff.format]
indent-style = "tab"

[tool.poetry.dependencies.pywin32]
version = "^308"
platform = "win32"

[tool.poetry.dependencies.wmi]
version = "^1.5.1"
platform = "win32"

[tool.poetry.dependencies.pywin32-ctypes]
version = "^0.2.0"
platform = "win32"

[tool.poetry.dependencies.macholib]
version = "^1.14"
platform = "darwin"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1"
pyinstaller = "^6.10"
ruff = "^0.6"
mypy = "^1.9"
